# cpp-linear-algebra-toolbox

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml  doxygen.yml  perf.yml
docs/: CMakeLists.txt  doxyfile.conf  doxyfile.in
docs/assets/doxygen/: header.html
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_l_s_q-members.html  class_l_s_q.html  class_l_s_q.js  class_l_t_matrix-members.html  class_l_t_matrix.html  class_l_t_matrix.js  class_l_t_matrix__coll__graph.map  class_l_t_matrix__inherit__graph.map  class_l_t_matrix__inherit__graph.md5  class_matrix-members.html  class_matrix.html  class_matrix.js  class_matrix__inherit__graph.map  class_matrix__inherit__graph.md5  class_square_matrix-members.html  class_square_matrix.html  class_square_matrix.js  class_square_matrix__inherit__graph.map  class_vector-members.html  class_vector.html  class_vector.js  classes.html  diagonal_matrix_8cpp.html  diagonal_matrix_8cpp.js  diagonal_matrix_8cpp__incl.map  diagonal_matrix_8cpp__incl.md5  diagonal_matrix_8h.html  diagonal_matrix_8h.js  diagonal_matrix_8h__dep__incl.map  diagonal_matrix_8h__dep__incl.md5  diagonal_matrix_8h__incl.map  diagonal_matrix_8h__incl.md5  diagonal_matrix_8h_source.html  dir_000001_000000.html  dir_000002_000000.html  dir_22759b2357b28df387ac7f15bd61889c.html  dir_22759b2357b28df387ac7f15bd61889c.js  (+98 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  (+28 more)
docs/img/icons/: favicon.sh
example/: ex_linalg_1.cpp  ex_linalg_2.cpp  ex_matrix_1.cpp  ex_matrix_2.cpp  ex_vector.cpp
examples/: ex_linalg_1.cpp  ex_linalg_2.cpp  ex_matrix_1.cpp  ex_matrix_2.cpp
include/: CMakeLists.txt  diagonalMatrix.h  diagonalMatrix.h.in  linalg.h  linalg.h.in  lowerTriangularMatrix.h  lowerTriangularMatrix.h.in  lsq.h  lsq.h.in  matrix.h  matrix.h.in  squareMatrix.h.in  utils.h  utils.h.in  vector.h  vector.h.in
include/header/: squareMatrix.h
include/in/: diagonalMatrix.h.in  linalg.h.in  lowerTriangularMatrix.h.in  lsq.h.in  matrix.h.in  squareMatrix.h.in  utils.h.in  vector.h.in
perf/: CMakeLists.txt  README.md  perf_linalg_lib.py  perf_vector.cpp  perf_vector_1.cpp
perf/in/: README.md.in
src/: CMakeLists.txt  diagonalMatrix.cpp  linalg.cpp  lowerTriangularMatrix.cpp  matrix.cpp  squareMatrix.cpp  utils.cpp  vector.cpp
src/in/: diagonalMatrix.cpp.in  matrix.cpp.in  squareMatrix.cpp.in  vector.cpp.in
tests/: CMakeLists.txt  test_diagonalmatrix.cpp  test_matrix.cpp  test_squarematrix.cpp  test_vector.cpp
